# rust

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  prompt.md  rustfmt.toml
crates/oxide-web/: Cargo.toml
crates/oxide-web-core/: Cargo.toml
crates/oxide-web-core/src/: body.rs  error.rs  handler.rs  lib.rs  request.rs  response.rs  server.rs  service.rs  shutdown.rs
crates/oxide-web-router/: Cargo.toml
crates/oxide-web-router/src/: error.rs  lib.rs  method.rs  params.rs  router.rs  tree.rs
crates/oxide-web-testing/: Cargo.toml
crates/oxide-web-testing/src/: lib.rs  response.rs  server.rs
crates/oxide-web/src/: application.rs  lib.rs
crates/oxide-web/tests/: integration.rs  server_lifecycle.rs
crates/oxide-web/tests/common/: mod.rs
docs/: architecture.md  roadmap.md  security.md
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/landing-page/: Cargo.toml
examples/landing-page/src/: main.rs
examples/landing-page/static/: index.html
