[package]
name = "oxide-web-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core server lifecycle, body/request/response types, and handler abstractions for oxide-web."
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
tokio = { workspace = true, features = ["net", "rt", "time", "signal", "sync", "io-util", "macros"] }
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["tokio", "server-auto", "server-graceful"] }
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
bytes.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
