[package]
name = "oxide-web-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "In-process test harness and HTTP assertions for the oxide-web framework."
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
oxide-web.workspace = true
oxide-web-core.workspace = true
tokio = { workspace = true, features = ["net", "rt", "macros", "sync"] }
hyper = { workspace = true, features = ["client", "http1"] }
hyper-util = { workspace = true, features = ["tokio"] }
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
